# open-speech

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.cpu  FIXES.md  README.md  ROADMAP.md  STATE.md  docker-compose.cpu.yml  docker-compose.gpu.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
client-js/: README.md  package.json  tsconfig.json
client-js/src/: index.ts
docs/: FIXES-POST-PHASE4.md  PHASE-6.md  PROVIDER-REMOVAL-DESIGN.md  QWEN3-TTS-INTEGRATION.md  SECURITY-REVIEW.md  TEST-PLAN-CPU-MODELS.md  TTS-BACKENDS.md
examples/: python_client.py
src/: composer.py  config.py  conversation.py  lifecycle.py  main.py  middleware.py  model_manager.py  model_registry.py  models.py  profiles.py  router.py  ssl_utils.py  storage.py  streaming.py
src/audio/: postprocessing.py  preprocessing.py
src/backends/: base.py  faster_whisper.py  moonshine.py  vosk_backend.py
src/cache/: tts_cache.py
src/client/: __init__.py
src/diarization/: pyannote_diarizer.py
src/effects/: __init__.py
src/pronunciation/: dictionary.py
src/realtime/: __init__.py  audio_buffer.py  events.py  server.py  session.py
src/static/: app.css  app.js  index.html
src/tts/: models.py  pipeline.py  router.py
src/tts/backends/: base.py  f5tts_backend.py  fish_speech_backend.py  kokoro.py  piper_backend.py  qwen3_backend.py
src/utils/: audio.py
src/wyoming/: __init__.py  server.py  stt_handler.py  tts_handler.py
tests/: conftest.py  test_audio_processing.py  test_client_sdk.py  test_composer_api.py  test_composer_unit.py  test_conversation_api.py  test_diarization.py  test_f5tts_backend.py  test_lifecycle.py  test_model_api.py  test_model_browser_api.py  test_model_crud.py  test_model_lifecycle_manual.py  test_model_manager.py  test_moonshine.py  test_phase6_api.py  test_piper_backend.py  test_profiles_api.py  test_pronunciation.py  test_qwen3_backend.py  test_realtime.py  test_security.py  test_streaming.py  test_streaming_session_runtime.py  test_streaming_units.py  test_tts_cache.py  test_tts_capabilities.py  test_tts_kokoro.py  test_tts_model_api.py  test_tts_router.py  test_tts_streaming.py  test_tts_ui_capability_gating.py  test_ui_model_orchestration.py  test_unified_api.py  test_voice_presets.py  test_vosk.py  test_ws_client.py  test_wyoming.py
