[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "open-speech"
version = "0.1.0"
description = "OpenAI-compatible speech-to-text server with pluggable backends"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "will-assistant" }]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "faster-whisper>=1.0.0",
    "huggingface-hub>=0.24.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "onnxruntime>=1.16.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
